--- a/argo.yaml
+++ b/argo.yaml
@@ -3,37 +3,36 @@ kind: Deployment
 metadata:
   name: fatclinic-was-deployment
   labels:
-    app: fatclinic
+    tier: was
 spec:
   replicas: 3 # pod 개수 지정 
   selector:
     matchLabels:
-      app: fatclinic
+      tier: was
   template:
     metadata:
       labels:
-        app: fatclinic
         tier: was
     spec:
       containers:
       - name: fatclinic-container
-        image: asia.gcr.io/midyear-spot-368821/fatclinic-was:v1
+        image: asia.gcr.io/terraform-tae/fatclinic:30
         ports:
         - containerPort: 8080
         resources:
-          requests:
+          requests: ## 오토파일럿 모드에서 없으면 에러 발생 
             memory: "100Mi"
             cpu: "250m"
-          limits:  
-            cpu: "500m"  
+          limits: ## limit이 없으면 오토스케일링 문제 발생  
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: argo-lb
+  name: fatclinic-svc
 spec:
   selector:
-    app: spring-boot-app
+    tier: was
   ports:
     - protocol: TCP
       port: 8080
